--- a/anime.html
+++ b/anime.html
@@ -45,9 +45,9 @@
 <body>
    <h1>Aniwatch</h1> 
    <div class="first">
-   <img src="smallnaruto.jpg" alt="nothing"  width="400px" height="300px" id="img1">
-   <img src="shippuden.jpg" alt="nothing"  width="400px" height="300px" id="img2">
-   <img src="boruto.jpg" alt="nothing"  width="400px" height="300px" id="img3">
+   <img src="smallnaruto.jpg" alt="nothing"  width="400%" height="300%" id="img1">
+   <img src="shippuden.jpg" alt="nothing"  width="400%" height="300%" id="img2">
+   <img src="boruto.jpg" alt="nothing"  width="400%" height="300%" id="img3">
    <a href="narutofile.html" id="id1">Naruto classic</a>
    <a href="shippudenfile.html" id="id2">Naruto Shippuden</a>
    <a href="borutofile.html" id="id3">Boruto</a>
