--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         .ab{
             position: relative; left: 600px; top: 200px;
             backdrop-filter: blur(10px);
-            width: 280px;
+            width: 27.5%;
         }
         fieldset{
             height: 300px;
@@ -28,8 +28,8 @@
             width: 200px;
             margin-bottom: 20px;
             height: 25px;
-            background: transparent; background-color: rgba(0,0,0,0)
-            color:aliceblue;
+            background: transparent; background-color: rgba(0,0,0,0);
+            color:yellow;
         }
         button{
          width: 80px;
