--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         .ab{
             position: relative; left: 600px; top: 200px;
             backdrop-filter: blur(10px);
-            width: 27.5%;
+            width: 26;
         }
         fieldset{
             height: 300px;
