--- a/anime.html
+++ b/anime.html
@@ -42,7 +42,7 @@
    <div class="holder">
 
     <a href="narutofile.html">
-        <img src="smallnaruto.1jpg.jpg" alt="nothing" class="img"> Naruto </a>
+        <img src="smallnaruto.jpg" alt="nothing" class="img"> Naruto </a>
     <a href="shippudenfile.html">
         <img src="shippuden.jpg" alt="nothing" class="img">Naruto Shippuden
     </a>
